# Granular-Delay

./: .gitignore  CMakeLists.txt  JUCE  README.md
Latest Builds/GranularDelay.app/Contents/: Info.plist
Latest Builds/GranularDelay.vst3/Contents/: Info.plist
Latest Builds/GranularDelay.vst3/Contents/Resources/: moduleinfo.json
Latest Builds/GranularDelay.vst3/Contents/_CodeSignature/: CodeResources
Latest Builds/MWDelay.component/Contents/: Info.plist
Latest Builds/MWDelay.vst3/Contents/: Info.plist
Latest Builds/MWDelay.vst3/Contents/Resources/: moduleinfo.json
Latest Builds/MWDelay.vst3/Contents/_CodeSignature/: CodeResources
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
